--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    background-image: url(image/patt.png);
 }
+
+
+
 *{
     box-sizing: border-box;
 }
@@ -62,4 +66,8 @@ body{
     float: left;
     padding-left: 15px;
     padding-right: 15px;
+}
+.header{
+    background-color: rgba(255, 255, 255, 0.75);
+    padding: 25px 0;
 }
