--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     padding-right: 15px;
     margin: 0 auto;
 }
-.row::after, .menu::after{
+.row::after, .menu::after, .lower-menu::after{
     content: "";
     display: block;
     clear: both;
@@ -78,11 +78,10 @@ body{
     float: left;
     width: 25%;
     border-left: 1px solid #2c71b8;
-
 }
 .menu li:last-child{
     border-right: 1px solid #2c71b8;
-}
+}    
 .menu a{
     display: block;
     height: 50px;
@@ -94,5 +93,68 @@ body{
 }
 .menu a:hover{
     background-color: #2c71b8;
+    color: white; 
+}
+.lower-menu{
+    width: 286px;
+}
+.lower-menu li{
+    width: 286px;
+    height: 40px;
+}
+.lower-menu a{
+    height: 40px;
+}
+
+
+
+
+
+.form{
+    width: 200px;
+    height: 40px;
+    border: 1px solid rgb(44, 113, 184 );
+    background-color: rgb(44, 113, 184, 0.01);
+    margin-top: 4px;
+}
+input::placeholder{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #2c71b8;
+    font-size: 21px;
+    padding: 10px;
+    
+}
+.search{
+    width: 30px;
+    height: 30px;
+    background-color: #2c71b8;
+    border: none;
+    position: relative;
+    margin-left: -40px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.buy{
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    position: absolute;
+    margin-left: 30px;
+    margin-top: 4px;
+    border: none;
+    cursor: pointer;
+}
+
+   
+#four{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #2c71b8;
     color: white;
+    border: none;
+    position: absolute;
+    margin-left: 20px;
+    
 }
