--- a/style.css
+++ b/style.css
@@ -158,3 +158,32 @@ input::placeholder{
     margin-left: 20px;
     
 }
+
+
+
+
+.form-search-header{
+    border: 1px solid #2c71b8;
+}
+.form-search-header input{
+    background-color: transparent;
+    border: none;
+}
+.form-search-header input:focus{
+    outline: none;
+}
+.form-search-header button{
+    width: 30px;
+    height: 30px;
+    background-color: #2c71b8;
+}
+.cart-header{
+    width: 20px;
+    height: 20px;
+    background-color: #2c71b8;
+    border-radius: 50%;
+    font-size: 10px;
+    text-align: center;
+    line-height: 20px;
+    
+}
