--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     padding-right: 15px;
     margin: 0 auto;
 }
-.row::after, .menu::after, .lower-menu::after{
+.row::after, .menu::after, .lower-menu::after, .form-search-header::after {
     content: "";
     display: block;
     clear: both;
@@ -74,15 +74,16 @@ body{
 .logo{
     margin-top: 7px;
 }
-.menu li{
+.menu> li{
     float: left;
     width: 25%;
     border-left: 1px solid #2c71b8;
+    position: relative;
 }
 .menu li:last-child{
     border-right: 1px solid #2c71b8;
 }    
-.menu a{
+.menu>li> a{
     display: block;
     height: 50px;
     text-decoration: none;
@@ -95,79 +96,56 @@ body{
     background-color: #2c71b8;
     color: white; 
 }
+.icon{
+    width: 15px;
+    height: 15px;
+    display: block;
+    position: absolute;
+    right: 10px;
+    bottom: 15px;
+}
 .lower-menu{
     width: 286px;
+    display: none;
+    position: absolute;
+    left: -1px;
+    background-color: #2c71b8;
+}
+.menu>li:hover .lower-menu{
+    display: block;
 }
 .lower-menu li{
     width: 286px;
     height: 40px;
+    background-color: #2c71b8;
 }
 .lower-menu a{
     height: 40px;
-}
-
-
-
-
-
-.form{
-    width: 200px;
-    height: 40px;
-    border: 1px solid rgb(44, 113, 184 );
-    background-color: rgb(44, 113, 184, 0.01);
-    margin-top: 4px;
-}
-input::placeholder{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    color: #2c71b8;
+    display: block;
     font-size: 21px;
-    padding: 10px;
-    
+    text-decoration: none;
+    color: #fff;
+    line-height: 40px;
+    padding-left: 21px;
 }
-.search{
-    width: 30px;
-    height: 30px;
-    background-color: #2c71b8;
-    border: none;
-    position: relative;
-    margin-left: -40px;
-    margin-top: 10px;
-    cursor: pointer;
+.lower-menu a:hover{
+    background-color: #fff;
+    color: #2c71b8;
+    font-family: 'Roboto', sans-serif;
 }
-.buy{
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    position: absolute;
-    margin-left: 30px;
-    margin-top: 4px;
-    border: none;
-    cursor: pointer;
-}
-
-   
-#four{
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: #2c71b8;
-    color: white;
-    border: none;
-    position: absolute;
-    margin-left: 20px;
-    
-}
-
-
-
 
 .form-search-header{
     border: 1px solid #2c71b8;
+    height: 40px;
+    float: left;
+    
 }
 .form-search-header input{
     background-color: transparent;
     border: none;
+    height: 30px;
+    padding-left: 15px;
+    padding-top: 10px;
 }
 .form-search-header input:focus{
     outline: none;
@@ -176,8 +154,33 @@ input::placeholder{
     width: 30px;
     height: 30px;
     background-color: #2c71b8;
+    border: none;
+    position: absolute;
+    margin-left: -35px;
+    margin-top: 4px;
+    cursor: pointer;
 }
+::-webkit-input-placeholder{
+    color: #2c71b8;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 21px;
+} 
+
 .cart-header{
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    position: relative;
+    float: left;
+    cursor: pointer;
+}
+.cart-header img{
+    position: relative;
+    top: 10px;
+    left: 10px;
+}
+.product-count{
     width: 20px;
     height: 20px;
     background-color: #2c71b8;
@@ -185,5 +188,35 @@ input::placeholder{
     font-size: 10px;
     text-align: center;
     line-height: 20px;
-    
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    color: #fff;
 }
+
+.main{
+    display: block;
+    height: 2735px;
+}
+.slide{
+    height: 400px;
+    background-color:#215b98;
+    opacity: 0.75;
+}
+
+/* .PC{
+    display: block;
+    width: 270px;
+    height: 180px;
+    background-color: #fff;
+    opacity: 0.75;
+}
+.PC img{
+   
+} */
+
+
+
+
+
+
