--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ body{
     height: 40px;
     background-color: #2c71b8;
     border: none;
+    z-index: 10;
 }
 .lower-menu a{
     height: 40px;
